# llama-stack

./: .dockerignore  .gitignore  Containerfile  Makefile  README.md  lightspeed-stack.yaml  package.json  pyproject.toml  run-no-guard.yaml  run.yaml
.github/workflows/: ci.yml  dev.yml  validation.yml
config/providers.d/inline/safety/: lightspeed_question_validity.yaml
docs/: DEPLOYMENT.md
env/: default-values.env
patches/: fix_tool_executor_attributes.py
scripts/: entrypoint.sh
scripts/python-scripts/: sync.py
