[project]
name = "llama-stack-runner"
version = "0.1.1"
description = "Llama Stack runner"
authors = []
dependencies = [
    "ollama>=0.2.0",
    "blobfile>=3.0.0",
    "datasets>=3.6.0",
    "faiss-cpu>=1.11.0",
    "mcp>=1.9.4",
    "autoevals>=0.0.129",
    "psutil>=7.0.0",
    "peft>=0.15.2",
    "trl>=0.18.2",
    "greenlet",
    "torch",
    "sentence-transformers>=5.0.0",
    "pydantic>=2.10.6",
    "httpx",
    "chardet",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache2.0"}

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = { index = "torch-cpu" }

[tool.uv]
override-dependencies = [
  "nvidia-cublas-cu12 ; sys_platform=='never'",
  "nvidia-cuda-cupti-cu12 ; sys_platform=='never'",
  "nvidia-cuda-nvrtc-cu12 ; sys_platform=='never'",
  "nvidia-cuda-runtime-cu12 ; sys_platform=='never'",
  "nvidia-cudnn-cu12 ; sys_platform=='never'",
  "nvidia-cufft-cu12 ; sys_platform=='never'",
  "nvidia-curand-cu12 ; sys_platform=='never'",
  "nvidia-cusolver-cu12 ; sys_platform=='never'",
  "nvidia-cusparse-cu12 ; sys_platform=='never'",
  "nvidia-nccl-cu12 ; sys_platform=='never'",
  "nvidia-nvtx-cu12 ; sys_platform=='never'",
  "nvidia-nvjitlink-cu12 ; sys_platform=='never'",
  "nvidia-cusparselt-cu12 ; sys_platform=='never'",
  "nvidia-cufile-cu12 ; sys_platform=='never'",
  "triton ; sys_platform=='never'",
]

[tool.pdm]
distribution = false
